--- a/src/main/yaml/simulationTestCollectiveActionGNN.yml
+++ b/src/main/yaml/simulationTestCollectiveActionGNN.yml
@@ -23,7 +23,7 @@ variables:
   episodeLength: &episodeLength { formula: 200, language: application/x-scala }
   bufferSize: &bufferSize { formula: 1000, language: application/x-scala }
   actionSpaceEvaluated: &actionSpaceEvaluated
-    formula: "it.unibo.learning.abstractions.ActionSpace.create(5, List(0.5), true)"
+    formula: "it.unibo.learning.abstractions.ActionSpace.create(20, List(0, 0.5, 1), false)"
     language: application/x-scala
 
   neuralNet: &neuralNet
@@ -38,7 +38,7 @@ variables:
       import it.unibo.learning.network._;
       import it.unibo.scripting._;
       new GNNSpatial(
-        hiddenSize = 64,
+        hiddenSize = 256,
         actionSpace = actionSpaceEvaluated.as[List[Any]]
       )
     language: application/x-scala
@@ -65,10 +65,9 @@ seeds:
   simulation: *random
 
 layers:
-  - type: CircleLayer
-    parameters: [500, 500, 200, 1]
+  - type: BidimensionalGaussianLayer
     molecule: info
-
+    parameters: [ 500, 500, 1, 100 ]
 environment:
   type: Continuous2DEnvironment
   parameters: []
