--- a/src/main/yaml/simulationTestCollectiveActionGNNTwo.yml
+++ b/src/main/yaml/simulationTestCollectiveActionGNNTwo.yml
@@ -21,7 +21,7 @@ variables:
 
   batchSize: &batchSize { formula: 32, language: application/x-scala }
   episodeLength: &episodeLength { formula: 200, language: application/x-scala }
-  bufferSize: &bufferSize { formula: 10000, language: application/x-scala }
+  bufferSize: &bufferSize { formula: 1000, language: application/x-scala }
   actionSpaceEvaluated: &actionSpaceEvaluated
     formula: "it.unibo.learning.abstractions.ActionSpace.create(20, List(0, 0.5, 1), false)"
     language: application/x-scala
@@ -38,7 +38,7 @@ variables:
       import it.unibo.learning.network._;
       import it.unibo.scripting._;
       new GNNSpatial(
-        hiddenSize = 256,
+        hiddenSize = 64,
         actionSpace = actionSpaceEvaluated.as[List[Any]]
       )
     language: application/x-scala
@@ -50,10 +50,10 @@ variables:
       import it.unibo.learning.network.GraphNeuralNetworkRL;
       import it.unibo.scripting._;
       new DeepGnnQLearning(
-        epsilon = DecayReference.exponentialDecay(0.99, 0.1).bounded(0.05),
+        epsilon = DecayReference.exponentialDecay(0.0, 0.1).bounded(0.00),
         alpha = 0.0001,
         gamma = 0.99,
-        copyEach = episodeLength.as[Int],
+        copyEach = 200,
         referenceNet = neuralNet.as[GraphNeuralNetworkRL]
       )
     language: application/x-scala
@@ -65,12 +65,15 @@ seeds:
   simulation: *random
 
 layers:
-  - type: CircleLayer
-    parameters: [500, 500, 200, 1]
-    molecule: info_old
   - type: BidimensionalGaussianLayer
+    parameters: [700, 700, 1, 100]
+    molecule: info1
+  - type: BidimensionalGaussianLayer
+    parameters: [200, 200, 1, 100 ]
+    molecule: info2
+  - type: CombineAllLayer
+    parameters: [ ]
     molecule: info
-    parameters: [ 500, 500, 1, 100 ]
 environment:
   type: Continuous2DEnvironment
   parameters: []
@@ -79,7 +82,8 @@ environment:
         type: DiracComb
         parameters: [ 0.2, 1.0 ]
       type: GlobalLearnerDecentralisedAgentCollectiveGNN
-      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, true]
+      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false]
+
 
 network-model:
   type: ConnectWithinDistance
@@ -100,7 +104,7 @@ deployments:
   parameters: [0, 0, *width, *width, *spacing, *spacing, *randomness, *randomness]
   contents:
     molecule: view
-    concentration: 75.0
+    concentration: 100.0
   programs:
     - *program
 export:
