--- a/src/main/yaml/simulationCentralisedLearningGNNBasic.yml
+++ b/src/main/yaml/simulationCentralisedLearningGNNBasic.yml
@@ -121,3 +121,6 @@ export:
       - type: CoverageExtractor
         parameters: [ *view ]
       - type: StoreExtractor
+      - molecule: inside
+        aggregators: [ sum ]
+        value-filter: onlyfinite
