--- a/src/main/yaml/simulationTestGNNMoving.yml
+++ b/src/main/yaml/simulationTestGNNMoving.yml
@@ -16,7 +16,6 @@ variables:
   view: &view
     formula: 75.0
 
-
   environmentBox: &environmentBox
     formula: |
       import it.unibo.scripting._;
@@ -70,7 +69,7 @@ seeds:
 
 layers:
   - type: CircleLayer
-    parameters: [500, 500, 200, 1]
+    parameters: [500, 500, 200, 0]
     molecule: info_old
   - type: BidimensionalMovableLayer
     molecule: info
@@ -83,10 +82,10 @@ environment:
         type: DiracComb
         parameters: [ 0.2, 1.0 ]
       type: GlobalLearnerDecentralisedAgentCollectiveGNN
-      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false]
+      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, "gnn-informed", *random]
     - time-distribution:
         type: DiracComb
-        parameters: [ 0.2, 5.0 ]
+        parameters: [ 0.2, 2.0 ]
       type: MovingLayer
       parameters: [ *episodeLength ]
 
@@ -115,10 +114,18 @@ deployments:
 export:
   - type: CSVExporter
     parameters:
-      exportPath: "export"
-      fileNameRoot: "simulation"
+      exportPath: "test"
+      fileNameRoot: "moving-informed"
       interval: 1.0
     data:
       - time
       - type: CoverageExtractor
         parameters: [ *view ]
+      - type: StoreExtractor
+      - molecule: inside
+        aggregators: [ sum ]
+        value-filter: onlyfinite
+
+terminate:
+  - type: AfterTime
+    parameters: 200
