--- a/src/main/yaml/simulation.yml
+++ b/src/main/yaml/simulation.yml
@@ -5,17 +5,16 @@ variables:
   spacing: &spacing { formula: 200.0 }
   randomness: &randomness { formula: 25.0 }
   random: &random
-    min: 1
-    max: 1
+    min: 31
+    max: 31
     step: 1
-    default: 1
+    default: 31
 
   range: &range
-    formula: 400
+    formula: 300
 
   view: &view
     formula: 75.0
-
 
   environmentBox: &environmentBox
     formula: |
@@ -23,12 +22,10 @@ variables:
       it.unibo.learning.Box(width.as[Double], spacing.as[Double], randomness.as[Double])
     language: application/x-scala
 
-  batchSize: &batchSize { formula: 512, language: application/x-scala }
+  batchSize: &batchSize { formula: 32, language: application/x-scala }
   episodeLength: &episodeLength { formula: 200, language: application/x-scala }
-  bufferSize: &bufferSize { formula: 100000, language: application/x-scala }
-  windowSize: &windowSize { formula: 5, language: application/x-scala }
+  bufferSize: &bufferSize { formula: 1000, language: application/x-scala }
   actionSpaceEvaluated: &actionSpaceEvaluated
-    #formula: "it.unibo.learning.abstractions.ActionSpace.create(5, List(0, 1, 1.5, 2.0, 2.5, 3.0))"
     formula: "it.unibo.learning.abstractions.ActionSpace.create(20, List(0, 0.5, 1), false)"
     language: application/x-scala
 
@@ -73,12 +70,11 @@ seeds:
 
 layers:
   - type: CircleLayer
-    parameters: [ 500, 500, 200, 1 ]
+    parameters: [ 500, 500, 200, 0 ]
     molecule: info_old
   - type: BidimensionalGaussianLayer
     molecule: info
-    parameters: [ 500, 500, 1, 100 ]
-
+    parameters: [ 500, 500, 1, 80 ]
 environment:
   type: Continuous2DEnvironment
   parameters: []
@@ -87,7 +83,7 @@ environment:
         type: DiracComb
         parameters: [ 0.2, 1.0 ]
       type: GlobalLearnerDecentralisedAgentCollective
-      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, true, *random]
+      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, *random]
 
 network-model:
   type: ConnectWithinDistance
@@ -101,21 +97,20 @@ _reactions:
         type: Event
         actions:
           - type: RunScafiProgram
-            parameters: [it.unibo.scafi.ExplorerCollective, 2 ]
+            parameters: [it.unibo.scafi.ExplorerBasic, 2 ]
       - program: send
-
 deployments:
   type: Grid
   parameters: [0, 0, *width, *width, *spacing, *spacing, *randomness, *randomness]
   contents:
     molecule: view
-    concentration: *view
+    concentration: 100.0
   programs:
     - *program
 export:
   - type: CSVExporter
     parameters:
-      exportPath: "export"
+      exportPath: "test"
       fileNameRoot: "mlp"
       interval: 1.0
     data:
@@ -123,3 +118,10 @@ export:
       - type: CoverageExtractor
         parameters: [ *view ]
       - type: StoreExtractor
+      - molecule: inside
+        aggregators: [ sum ]
+        value-filter: onlyfinite
+
+terminate:
+  - type: AfterTime
+    parameters: 200
