--- a/src/main/yaml/simulationTestMLP.yml
+++ b/src/main/yaml/simulationTestMLP.yml
@@ -33,14 +33,15 @@ variables:
     formula: |
       import it.unibo.learning.network.torch.torch;
       import me.shadaj.scalapy.py
-      torch.manual_seed(0)
-      py.module("numpy").random.seed(0)
-      py.module("random").seed(0)
+      val seed = random.asInstanceOf[Double].toInt
+      torch.manual_seed(seed)
+      py.module("numpy").random.seed(seed)
+      py.module("random").seed(seed)
       torch.use_deterministic_algorithms(true)
       //torch.manual_seed(random.as[Double].toInt);
       import it.unibo.learning.network._;
       import it.unibo.scripting._;
-      new GNNSpatial(
+      new MLPSpatial(
         hiddenSize = 64,
         actionSpace = actionSpaceEvaluated.as[List[Any]]
       )
@@ -49,15 +50,15 @@ variables:
   learner: &learner
     formula: |
       import it.unibo.learning.abstractions.DecayReference;
-      import it.unibo.learning.agents.DeepGnnQLearning;
-      import it.unibo.learning.network.GraphNeuralNetworkRL;
+      import it.unibo.learning.agents.DeepQLearning;
+      import it.unibo.learning.network.MlpNeuralNetworkRL;
       import it.unibo.scripting._;
-      new DeepGnnQLearning(
-        epsilon = DecayReference.exponentialDecay(0.0, 0.1).bounded(0.00),
+      new DeepQLearning(
+        epsilon = DecayReference.exponentialDecay(0.9, 0.1).bounded(0.02),
         alpha = 0.0001,
         gamma = 0.99,
-        copyEach = 200,
-        referenceNet = neuralNet.as[GraphNeuralNetworkRL]
+        copyEach = episodeLength.as[Int],
+        referenceNet = neuralNet.as[MlpNeuralNetworkRL]
       )
     language: application/x-scala
 _constants:
@@ -81,8 +82,8 @@ environment:
     - time-distribution:
         type: DiracComb
         parameters: [ 0.2, 1.0 ]
-      type: GlobalLearnerDecentralisedAgentCollectiveGNN
-      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, "gnn", *random]
+      type: GlobalLearnerDecentralisedAgentCollective
+      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, *random]
 
 network-model:
   type: ConnectWithinDistance
@@ -110,7 +111,7 @@ export:
   - type: CSVExporter
     parameters:
       exportPath: "test"
-      fileNameRoot: "gnn"
+      fileNameRoot: "mlp"
       interval: 1.0
     data:
       - time
