--- a/src/main/yaml/simulationTestGNNTwoBasic.yml
+++ b/src/main/yaml/simulationTestGNNTwoBasic.yml
@@ -42,7 +42,7 @@ variables:
       import it.unibo.learning.network._;
       import it.unibo.scripting._;
       new GNNSpatial(
-        hiddenSize = 256,
+        hiddenSize = 64,
         actionSpace = actionSpaceEvaluated.as[List[Any]]
       )
     language: application/x-scala
@@ -92,8 +92,12 @@ environment:
         type: DiracComb
         parameters: [ 0.2, 1.0 ]
       type: GlobalLearnerDecentralisedAgentCollectiveGNN
-      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, "gnn-informed", *random]
-
+      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, "gnn", *random]
+    - time-distribution:
+        type: DiracComb
+        parameters: [ 0.2, 4.0 ]
+      type: MovingLayer
+      parameters: [ *episodeLength ]
 
 network-model:
   type: ConnectWithinDistance
@@ -107,7 +111,7 @@ _reactions:
         type: Event
         actions:
           - type: RunScafiProgram
-            parameters: [it.unibo.scafi.ExplorerCollectiveTwoLayer, 2 ]
+            parameters: [it.unibo.scafi.ExplorerCollectiveTwoLayerBasic, 2 ]
       - program: send
 deployments:
   type: Grid
@@ -121,7 +125,7 @@ export:
   - type: CSVExporter
     parameters:
       exportPath: "test"
-      fileNameRoot: "two-informed"
+      fileNameRoot: "two-gnn"
       interval: 1.0
     data:
       - time
