--- a/src/main/yaml/simulationTestGNNTwo.yml
+++ b/src/main/yaml/simulationTestGNNTwo.yml
@@ -92,7 +92,7 @@ environment:
         type: DiracComb
         parameters: [ 0.2, 1.0 ]
       type: GlobalLearnerDecentralisedAgentCollectiveGNN
-      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, *random]
+      parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, "gnn-informed", *random]
 
 
 network-model:
@@ -120,15 +120,21 @@ deployments:
 export:
   - type: CSVExporter
     parameters:
-      exportPath: "export"
+      exportPath: "test"
       fileNameRoot: "two-informed"
       interval: 1.0
     data:
       - time
       - type: CoverageExtractor
-        parameters: [ *view ]
+        parameters: [ *view, 2 ]
       - type: StoreExtractor
       - molecule: inside
+        aggregators: [ sum ]
+        value-filter: onlyfinite
+      - molecule: inside_1
+        aggregators: [ sum ]
+        value-filter: onlyfinite
+      - molecule: inside_2
         aggregators: [ sum ]
         value-filter: onlyfinite
 
