--- a/src/main/yaml/simulationTestMLPTwo.yml
+++ b/src/main/yaml/simulationTestMLPTwo.yml
@@ -106,7 +106,7 @@ _reactions:
         type: Event
         actions:
           - type: RunScafiProgram
-            parameters: [it.unibo.scafi.ExplorerCollective, 2 ]
+            parameters: [it.unibo.scafi.ExplorerCollectiveTwoLayer, 2 ]
       - program: send
 deployments:
   type: Grid
