feat: prepare for artefact, change ci pipeline, improve simulation script

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ python-dateutil==2.8.2
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 six==1.16.0
+torch==2.0.0
+torch_geometric==2.3.0
+pathlib2==2.3.7
+tensorboard==2.13.0
+tensordict==0.1.2
