--- a/src/main/yaml/simulationCentralisedTrainingGNN.yml
+++ b/src/main/yaml/simulationCentralisedTrainingGNN.yml
@@ -16,7 +16,6 @@ variables:
   view: &view
     formula: 75.0
 
-
   environmentBox: &environmentBox
     formula: |
       import it.unibo.scripting._;
@@ -25,20 +24,25 @@ variables:
 
   batchSize: &batchSize { formula: 32, language: application/x-scala }
   episodeLength: &episodeLength { formula: 200, language: application/x-scala }
-  bufferSize: &bufferSize { formula: 1000, language: application/x-scala }
+  bufferSize: &bufferSize { formula: 10000, language: application/x-scala }
   actionSpaceEvaluated: &actionSpaceEvaluated
-    formula: "it.unibo.learning.abstractions.ActionSpace.create(5, List(0.5), true)"
+    formula: "it.unibo.learning.abstractions.ActionSpace.create(20, List(0, 0.5, 1), false)"
     language: application/x-scala
 
   neuralNet: &neuralNet
     formula: |
       import it.unibo.learning.network.torch.torch;
-      torch.manual_seed(0)
+      import me.shadaj.scalapy.py
+      val seed = random.asInstanceOf[Double].toInt
+      torch.manual_seed(seed)
+      py.module("numpy").random.seed(seed)
+      py.module("random").seed(seed)
+      torch.use_deterministic_algorithms(true)
       //torch.manual_seed(random.as[Double].toInt);
       import it.unibo.learning.network._;
       import it.unibo.scripting._;
       new GNNSpatial(
-        hiddenSize = 64,
+        hiddenSize = 256,
         actionSpace = actionSpaceEvaluated.as[List[Any]]
       )
     language: application/x-scala
@@ -50,10 +54,10 @@ variables:
       import it.unibo.learning.network.GraphNeuralNetworkRL;
       import it.unibo.scripting._;
       new DeepGnnQLearning(
-        epsilon = DecayReference.exponentialDecay(0.9, 0.1).bounded(0.02),
+        epsilon = DecayReference.exponentialDecay(0.99, 0.1).bounded(0.05),
         alpha = 0.0001,
         gamma = 0.99,
-        copyEach = 200,
+        copyEach = episodeLength.as[Int],
         referenceNet = neuralNet.as[GraphNeuralNetworkRL]
       )
     language: application/x-scala
@@ -66,15 +70,11 @@ seeds:
 
 layers:
   - type: CircleLayer
-    parameters: [500, 500, 200, 1]
-    molecule: info1
-  - type: CircleLayer
-    parameters: [0, 0, 200, 1 ]
-    molecule: info2
-  - type: CombineAllLayer
-    parameters: [ ]
+    parameters: [500, 500, 200, 0]
+    molecule: info_old
+  - type: BidimensionalGaussianLayer
     molecule: info
-
+    parameters: [ 500, 500, 1, 100 ]
 environment:
   type: Continuous2DEnvironment
   parameters: []
@@ -87,7 +87,7 @@ environment:
 
 network-model:
   type: ConnectWithinDistance
-  parameters: [ *range ]
+  parameters: [ 300 ]
 
 _reactions:
   - program: &program
@@ -102,20 +102,24 @@ _reactions:
 
 deployments:
   type: Grid
-  parameters: [0, 0, *width, *width, *spacing, *spacing, *randomness, *randomness, true]
-  programs:
-    - *program
+  parameters: [0, 0, *width, *width, *spacing, *spacing, *randomness, *randomness]
   contents:
     molecule: view
-    concentration: 100.0
+    concentration: *view
+  programs:
+    - *program
+
 export:
   - type: CSVExporter
     parameters:
       exportPath: "export"
-      fileNameRoot: "simulation"
+      fileNameRoot: "gnn"
       interval: 1.0
     data:
       - time
       - type: CoverageExtractor
         parameters: [ *view ]
       - type: StoreExtractor
+      - molecule: inside
+        aggregators: [ sum ]
+        value-filter: onlyfinite
