--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -54,8 +54,10 @@ jobs:
         run: pip install -r requirements.txt --user
       - name: Prepare charts folder
         run: mkdir -p charts
-      - name: Generate charts
-        run: python process.py
+      - name: Generate charts (Training)
+        run: python plotter.py
+      - name: Generate charts (Test)
+        run: python plotter-test.py
       - name: Generate archive
         run: tar --use-compress-program zstd -cf charts.tar.zst charts/
       - name: Upload charts
