--- a/src/main/yaml/simulation.yml
+++ b/src/main/yaml/simulation.yml
@@ -5,17 +5,16 @@ variables:
   spacing: &spacing { formula: 200.0 }
   randomness: &randomness { formula: 25.0 }
   random: &random
-    min: 63
-    max: 63
+    min: 15
+    max: 15
     step: 1
-    default: 63
+    default: 15
 
   range: &range
     formula: 300
 
   view: &view
     formula: 75.0
-
 
   environmentBox: &environmentBox
     formula: |
@@ -70,20 +69,11 @@ seeds:
 
 layers:
   - type: CircleLayer
-    parameters: [ 200, 200, 200, 0 ]
+    parameters: [ 500, 500, 200, 0 ]
     molecule: info_old
-  - type: CircleLayer
-    parameters: [ 700, 700, 200, 0 ]
-    molecule: info_old2
   - type: BidimensionalGaussianLayer
-    parameters: [700, 700, 1, 100]
-    molecule: info1
-  - type: BidimensionalGaussianLayer
-    parameters: [200, 200, 1, 100 ]
-    molecule: info2
-  - type: CombineAllLayer
-    parameters: [ ]
     molecule: info
+    parameters: [ 500, 500, 1, 80 ]
 environment:
   type: Continuous2DEnvironment
   parameters: []
@@ -93,7 +83,6 @@ environment:
         parameters: [ 0.2, 1.0 ]
       type: GlobalLearnerDecentralisedAgentCollectiveGNN
       parameters: [*learner, *bufferSize, *batchSize, *actionSpaceEvaluated, *episodeLength, *environmentBox, false, "gnn-informed", *random]
-
 
 network-model:
   type: ConnectWithinDistance
@@ -107,7 +96,7 @@ _reactions:
         type: Event
         actions:
           - type: RunScafiProgram
-            parameters: [it.unibo.scafi.ExplorerCollectiveTwoLayer, 2 ]
+            parameters: [it.unibo.scafi.ExplorerCollective, 2 ]
       - program: send
 deployments:
   type: Grid
@@ -121,23 +110,17 @@ export:
   - type: CSVExporter
     parameters:
       exportPath: "test"
-      fileNameRoot: "two-informed"
+      fileNameRoot: "gnn-informed"
       interval: 1.0
     data:
       - time
       - type: CoverageExtractor
-        parameters: [ *view, 2 ]
+        parameters: [ *view ]
       - type: StoreExtractor
       - molecule: inside
-        aggregators: [ sum ]
-        value-filter: onlyfinite
-      - molecule: inside_1
-        aggregators: [ sum ]
-        value-filter: onlyfinite
-      - molecule: inside_2
         aggregators: [ sum ]
         value-filter: onlyfinite
 
 terminate:
   - type: AfterTime
-    parameters: 200.0
+    parameters: 200
